--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/internmatch.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InternMatch - Connecting Students with Dream Internships</title>
     <meta name="description" content="InternMatch bridges the gap between talented students and companies seeking quality interns through rigorous assessment and skill development." />
